newtype-tools/tests/trybuild/newtype-list.stderr
error: expected identifier
 --> tests/trybuild/newtype-list.rs:2:11
  |
2 | #[newtype(;)]
  |           ^
